--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:white">
-    <h2>Hello, spinnaker!</h2>
+    <h2>Hello, Spinnaker!</h2>
   </body>
 </html>
