--- a/content/index.html
+++ b/content/index.html
@@ -2,6 +2,6 @@
 <html>
   <body style="background-color:white">
     <h2>Hello, Spinnaker!</h2>
-    <h2>kaniko-image, travis coding with golang</h2>
+    <h2>kaniko-image, travis coding this with golang</h2>
   </body>
 </html>
